--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
-<div class="min-h-screen font-sans">
+<div class="min-h-screen font-sans bg-gradient-to-br from-neutral-50 via-white to-neutral-100">
     <app-header (refreshClick)="onHeaderRefresh()"></app-header>
     
-    <main class="flex-1">
+    <main class="flex-1 animate-fade-in">
         <router-outlet/>
     </main>
     
