--- a/src/app/compoents/header/header.component.html
+++ b/src/app/compoents/header/header.component.html
@@ -46,6 +46,12 @@
           <span i18n="@@nav.services">Services</span>
         </a>
 
+        <a [routerLink]="['/blog']" 
+           routerLinkActive="nav-link--active" 
+           class="nav-link">
+          <span i18n="@@nav.blog">Blog</span>
+        </a>
+
         <a [routerLink]="['/contact']" 
            routerLinkActive="nav-link--active" 
            class="nav-link">
@@ -110,6 +116,14 @@
            class="mobile-nav-link"
            (click)="closeMenu()">
           <span class="mobile-nav-link__text" i18n="@@nav.services">Services</span>
+          <span class="mobile-nav-link__icon">→</span>
+        </a>
+
+        <a [routerLink]="['/blog']" 
+           routerLinkActive="mobile-nav-link--active" 
+           class="mobile-nav-link"
+           (click)="closeMenu()">
+          <span class="mobile-nav-link__text" i18n="@@nav.blog">Blog</span>
           <span class="mobile-nav-link__icon">→</span>
         </a>
 
