--- a/src/app/compoents/header/header.component.html
+++ b/src/app/compoents/header/header.component.html
@@ -46,7 +46,8 @@
           <span i18n="@@nav.services">Services</span>
         </a>
 
-        <a [routerLink]="['/blog']" 
+        <a *ngIf="isEnglishLocale"
+           [routerLink]="['/blog']" 
            routerLinkActive="nav-link--active" 
            class="nav-link">
           <span i18n="@@nav.blog">Blog</span>
@@ -119,7 +120,8 @@
           <span class="mobile-nav-link__icon">→</span>
         </a>
 
-        <a [routerLink]="['/blog']" 
+        <a *ngIf="isEnglishLocale"
+           [routerLink]="['/blog']" 
            routerLinkActive="mobile-nav-link--active" 
            class="mobile-nav-link"
            (click)="closeMenu()">
