--- a/src/app/compoents/header/header.component.html
+++ b/src/app/compoents/header/header.component.html
@@ -50,7 +50,7 @@
            [routerLink]="['/blog']" 
            routerLinkActive="nav-link--active" 
            class="nav-link">
-          <span i18n="@@nav.blog">Blog</span>
+          <span >Blog</span>
         </a>
 
         <a [routerLink]="['/contact']" 
@@ -125,7 +125,7 @@
            routerLinkActive="mobile-nav-link--active" 
            class="mobile-nav-link"
            (click)="closeMenu()">
-          <span class="mobile-nav-link__text" i18n="@@nav.blog">Blog</span>
+          <span class="mobile-nav-link__text" >Blog</span>
           <span class="mobile-nav-link__icon">→</span>
         </a>
 
